--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>this is my first CI/CD project</title>
+        <title>TO-Do-List</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
